# Seminar_diplomski

./: process_bag.sh
ceres_mpc/: CMakeLists.txt  package.xml
ceres_mpc/include/ceres_mpc/: mpc_mm_ceres.h
ceres_mpc/src/: ceres_mpc.cpp  ceres_mpc3.cpp  ceres_mpc_2.cpp  mpc_mm_ceres.cpp
morus_uav_gazebo/: README.md
morus_uav_gazebo/morus_control/: CMakeLists.txt  package.xml
morus_uav_gazebo/morus_control/config/: LinearMPC.cfg  morus_control.yaml
morus_uav_gazebo/morus_control/include/morus_control/: KFDisturbanceObserver.h  attitude_mpc_ctl _ceres.h  attitude_mpc_ctl.h  attitude_mpc_ctl_ceres.h  attitude_mpc_ctl_node.h  attitude_teleop_joy.h  mpc_mm_ceres.h  solver.h  steady_state_calculation.h
morus_uav_gazebo/morus_control/launch/: morus_control.launch  morus_control_debug.launch  morus_control_mpc.launch  mpc_attitude.launch
morus_uav_gazebo/morus_control/lib/: ldl.c  matrix_support.c  solver.c  util.c  variables_definition.c
morus_uav_gazebo/morus_control/src/: KFDisturbanceObserver.cpp  attitude_mpc_ctl _ceres.cpp  attitude_mpc_ctl.cpp  attitude_mpc_ctl_ceres.cpp  attitude_teleop_joy.cpp  height_position_ctl.py  height_yaw_ctl.py  mass_ctl_attitude.py  matrice_drona  steady_state_calculation.cpp  teleop_keyboard.py
morus_uav_gazebo/morus_control/src/nodes/: attitude_mpc_ctl_node.cpp
morus_uav_gazebo/morus_gazebo/: CMakeLists.txt
morus_uav_gazebo/morus_msgs/: CMakeLists.txt  package.xml
morus_uav_ros_msgs/: CMakeLists.txt  README.md  package.xml
morus_uav_ros_msgs/msg/: AttitudeControlStatus.msg  BatteryStatus.msg  ControllerMode.msg  GmChoke.msg  GmIgnition.msg  GmSpeed.msg  GmStarter.msg  GmStatus.msg  GmThrottle.msg  JoyRefHMI.msg  MmReference.msg  MmReferenceArray.msg  MmStatus.msg  MmStatusArray.msg  PidStatus.msg  PositionControlStatus.msg  PositionControllerReference.msg
morus_uav_ros_msgs/srv/: SpeedControl.srv
snimke/: angles.txt  disturbances.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_attitude_command.txt  motor_speed_command.txt  motor_speed_height_command.txt  motor_speed_state.txt  pose.txt  pose_ref.txt  position.txt  target_input.txt  target_states.txt  velocity.txt
snimke/bez int/: angles.txt  disturbances.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_attitude_command.txt  motor_speed_command.txt  motor_speed_height_command.txt  motor_speed_state.txt  pose.txt  pose_ref.txt  target_input.txt  target_states.txt  velocity.txt
snimke/bez int x os pa y os/: angles.txt  disturbances.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_attitude_command.txt  motor_speed_command.txt  motor_speed_height_command.txt  motor_speed_state.txt  pose.txt  pose_ref.txt  position.txt  target_input.txt  target_states.txt  velocity.txt
snimke/bez int zbloko gazebo x os pa y os/: angles.txt  disturbances.txt  euler_ref.txt  mass_0_command.txt  mass_0_position.txt  mass_0_velocity.txt  mass_1_command.txt  mass_1_position.txt  mass_1_velocity.txt  mass_2_command.txt  mass_2_position.txt  mass_2_velocity.txt  mass_3_command.txt  mass_3_position.txt  mass_3_velocity.txt  motor_speed_attitude_command.txt  motor_speed_command.txt  motor_speed_height_command.txt  motor_speed_state.txt  pose.txt  pose_ref.txt  position.txt  target_input.txt  target_states.txt  velocity.txt
snimke/bez int2/: angles.txt  disturbances.txt  pose.txt  (+21 more)
(+117 files in other folders)
